--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,14 @@
-name: Build and Deploy
-on:
+name: Build and Test
+on: 
   push:
+    branches:
+      - '**'
+      - '!main'
+  pull_request:
     branches:
       - main
 jobs:
-  build-and-deploy:
+  test-and-build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
@@ -18,12 +22,7 @@ jobs:
       - name: Install and Build 🔧
         run: |
           npm ci
+          npm audit
+          npm run lint
+          npm test
           npm run build
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.7.1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: public
-          CLEAN: true
