--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start:dev": "webpack-dev-server",
     "watch": "webpack --watch",
     "lint": "eslint \"**/*.{jsx,js}\"",
-    "lint:fix": "eslint --fix \"**/*.{jsx,js}\""
+    "lint:fix": "eslint --fix \"**/*.{jsx,js}\"",
+    "test": "jest"
   },
   "keywords": [
     "React",
@@ -23,32 +24,38 @@
     "not IE_Mob 11"
   ],
   "engines": {
-    "node": ">=15.2.1",
-    "npm": ">=7.0.6"
+    "node": ">=15.3.0",
+    "npm": ">=7.0.14"
   },
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@types/jest": "^26.0.15",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^6.1.1",
     "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^5.0.1",
-    "eslint": "^7.13.0",
+    "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fileloader": "^2.0.0",
     "html-webpack-plugin": "^5.0.0-alpha.14",
-    "prettier": "^2.1.2",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
