--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
     "fileloader": "^2.0.0",
     "html-webpack-plugin": "^5.0.0-alpha.14",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.0",
     "sass": "^1.29.0",
