--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "not IE_Mob 11"
   ],
   "engines": {
-    "node": ">=15.8.0",
-    "npm": ">=7.5.1"
+    "node": ">=15.11.0",
+    "npm": ">=7.6.0"
   },
   "dependencies": {
     "react": "^17.0.1",
@@ -33,8 +33,8 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -43,29 +43,28 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^7.1.2",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
+    "copy-webpack-plugin": "^8.0.0",
+    "css-loader": "^5.1.2",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jest": "^24.3.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "fileloader": "^2.0.0",
-    "html-webpack-plugin": "^5.0.0",
+    "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "sass": "^1.32.6",
-    "sass-loader": "^11.0.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.21.1",
+    "webpack": "^5.25.1",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "workbox-webpack-plugin": "^6.1.0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
