--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - name: Use Node.js
+      - name: Use Node.js 🌱
         uses: actions/setup-node@v1
         with:
           node-version: '15.x'
