--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "browserslist": [
     "defaults",
     "not IE 11",
-    "not IE_Mob 11"
+    "not IE_Mob 11",
+    "not kaios 2.5",
+    "not baidu 7.12"
   ],
   "engines": {
-    "node": ">=15.11.0",
-    "npm": ">=7.6.0"
+    "node": ">=15.12.0",
+    "npm": ">=7.6.3"
   },
   "dependencies": {
     "react": "^17.0.1",
@@ -41,6 +43,7 @@
     "@types/jest": "^26.0.21",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "browserslist": "^4.16.3",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^8.0.0",
@@ -63,7 +66,7 @@
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.26.3",
+    "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   }
