--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query-params": "^1.0.9",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
