[Ramki] fix banner navigation issue

--- a/src/assets/app.json
+++ b/src/assets/app.json
@@ -127,7 +127,7 @@
     },
     {
       "id": 10,
-      "title": "Automate non funttional requirements with Puppeteer",
+      "title": "Automate non functional requirements with Puppeteer",
       "type": "workshop",
       "startTime": 1602303300000,
       "endTime": 1602315000000,
