--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           npm ci
           npm run build
+        env:
+          PUBLIC_URL: https://rmkanda.github.io/vodqa/
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
