[Ramki] Update contact email

--- a/src/assets/app.json
+++ b/src/assets/app.json
@@ -20,7 +20,7 @@
     { "name": "instagram", "link": "https://www.instagram.com/thoughtworks/" }
   ],
   "contact": {
-    "email": "vodqacoimbatore@thoughtworks.com",
+    "email": "vodqa-coimbatore@thoughtworks.com",
     "address": {
       "name": "ThoughtWorks Technologies (India) Pvt Ltd",
       "addressLine1": "1st Floor, KCT Tech Park",
