[Ramki] Add lint and test to CI

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,10 @@ jobs:
         run: |
           npm ci
           npm run build
-
+      - name: Lint and Test 🔧
+        run: |
+          npm run lint
+          npm run test
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
