--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - '**'
       - '!main'
+      - '!master'
+      - '!gh-pages'
   pull_request:
     branches:
       - main
