[Ramki] Add slides for flutter session

--- a/src/assets/app.json
+++ b/src/assets/app.json
@@ -63,6 +63,7 @@
               "speaker": "Vojaswwin A P and Shoban Manohar - Quality Analyst, ThoughtWorks.",
               "startTime": 1618032600000,
               "endTime": 1618034400000,
+              "slides": "https://docs.google.com/presentation/d/e/2PACX-1vSdpeevS6W-ETZz5vazWC_4B9kusIKqE_kDExPbSnZGQTrbQAvga1ZDp63THSWgh2gHEMPuQ-rl4VTT/embed?start=false&loop=false&delayms=3000",
               "speakers": [
                 {
                   "name": "Vojaswwin A P",
