Removed presentation and video links

--- a/src/assets/app.json
+++ b/src/assets/app.json
@@ -49,8 +49,8 @@
               "speaker": "Kowcik R - Quality Analyst, Thoughtworks.",
               "startTime": 1636777800000,
               "endTime": 1636780800000,
-              "slides": "https://docs.google.com/presentation/d/e/2PACX-1vT48imq2JMtfoB4DgcDfhW9SuiDSo2L1EjHPdJwGAPTq7ck7_83T1MWjNZ0HIuPqv2jf3FvvK8I4IWF/embed?start=false&loop=false&delayms=3000",
-              "recording": "https://www.youtube.com/embed/urn7fq75vdA",
+              "slides": "",
+              "recording": "",
               "speakers": [
                 {
                   "name": "Kowcik R",
@@ -74,8 +74,8 @@
               "speaker": "Soundarrajan T - Quality Analyst, Thoughtworks.",
               "startTime": 1636780800000,
               "endTime": 1636784400000,
-              "slides": "https://docs.google.com/presentation/d/e/2PACX-1vT48imq2JMtfoB4DgcDfhW9SuiDSo2L1EjHPdJwGAPTq7ck7_83T1MWjNZ0HIuPqv2jf3FvvK8I4IWF/embed?start=false&loop=false&delayms=3000",
-              "recording": "https://www.youtube.com/embed/urn7fq75vdA",
+              "slides": "",
+              "recording": "",
               "speakers": [
                 {
                   "name": "Soundarrajan T,",
@@ -99,8 +99,8 @@
               "speaker": "Suresh Kumar Duraisamy - Quality Analyst, Thoughtworks.",
               "startTime": 1636784400000,
               "endTime": 1636786800000,
-              "slides": "https://docs.google.com/presentation/d/e/2PACX-1vT48imq2JMtfoB4DgcDfhW9SuiDSo2L1EjHPdJwGAPTq7ck7_83T1MWjNZ0HIuPqv2jf3FvvK8I4IWF/embed?start=false&loop=false&delayms=3000",
-              "recording": "https://www.youtube.com/embed/urn7fq75vdA",
+              "slides": "",
+              "recording": "",
               "speakers": [
                 {
                   "name": "Suresh Kumar Duraisamy,",
