Update rsvp link

--- a/src/assets/app.json
+++ b/src/assets/app.json
@@ -38,7 +38,7 @@
       "startTime": 1636777800000,
       "endTime": 1636786800000,
       "registration": {
-        "link": "https://www.meetup.com/vodqa-coimbatore/"
+        "link": "https://www.meetup.com/vodqa-coimbatore/events/281521796/"
       },
       "sessions": [
         {
