[Shoban/Akila] Updated graphQL slides link and speaker names

--- a/src/assets/app.json
+++ b/src/assets/app.json
@@ -77,12 +77,12 @@
               "speakers": [
                 {
                   "name": "Soundarrajan T,",
-                  "desgination": "Quality Analyst, Thoughtworks",
+                  "desgination": "Application Developer, Thoughtworks",
                   "profilePicture": "profile/soundar.png"
                 },
                 {
                   "name": "Aman Kumar Ayush",
-                  "desgination": "Quality Analyst, Thoughtworks",
+                  "desgination": "Application Developer, Thoughtworks",
                   "profilePicture": "profile/aman.png"
                 }
               ]
