Fix profile pic not loading issue

--- a/src/assets/app.json
+++ b/src/assets/app.json
@@ -95,7 +95,7 @@
                 {
                   "name": "Lovish Pahwa",
                   "desgination": "Developer, Thoughtworks",
-                  "profilePicture": "profile/lovish.png"
+                  "profilePicture": "profile/lovish.jpg"
                 }
               ]
             }
